# crowmotion

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  _config.yml  index.html  partitions.csv  sdkconfig.ci.signed  sdkconfig.defaults
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  deploy-website.yml  release-ota.yml
bridge/: CMakeLists.txt  sdkconfig.defaults
bridge/main/: CMakeLists.txt  bridge_main.c  ppm.c  ppm.h
components/crowlink/: CMakeLists.txt
components/crowlink/include/: crowlink_proto.h
docs/: BUILD.md
flasher/: index.html
hardware/enclosure/: crowmotion_case.scad  freelook_case.scad
keys/: README.md  crowmotion_ota_pub_rsa.pem
main/: CMakeLists.txt  Kconfig.projbuild  board.h  crowmotion_main.c  freelook_main.c  idf_component.yml  tracker.h  version.h
main/config/: config.c  config.h
main/fusion/: madgwick.c  madgwick.h
main/imu/: mpu6500.c  mpu6500.h
main/led/: led.c  led.h
main/link/: espnow_tx.c  espnow_tx.h
main/mapping/: mapping.c  mapping.h
main/para/: para_ble.c  para_ble.h
main/web/: index.html  webconfig.c  webconfig.h
website/: _redirects  index.html
website/crowlink/: index.html
website/crowmotion/: index.html
website/crowmotion/guide/: index.html
