# CrowMotion main application component.
# SPDX-License-Identifier: Apache-2.0

idf_component_register(
    SRCS
        "crowmotion_main.c"
        "para/para_ble.c"
        "imu/mpu6500.c"
        "fusion/madgwick.c"
        "mapping/mapping.c"
        "config/config.c"
        "web/webconfig.c"
        "led/led.c"
        "link/espnow_tx.c"
    INCLUDE_DIRS
        "."
        "para"
        "imu"
        "fusion"
        "mapping"
        "config"
        "web"
        "led"
        "link"
    EMBED_FILES
        "web/index.html"
    PRIV_REQUIRES
        crowlink
        bt
        nvs_flash
        esp_driver_i2c
        esp_driver_gpio
        esp_timer
        json
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        esp_http_client
        esp_https_ota
        app_update
        esp-tls
)
